p0c/mdapipkg/objects/Mail__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Mails</relationshipLabel>
        <relationshipName>Mails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DeliveryStatus__c</fullName>
        <label>DeliveryStatus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IN TRANSIT</fullName>
                </value>
                <value>
                    <fullName>DELIVERED</fullName>
                </value>
                <value>
                    <fullName>MISSING</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <label>Height</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Insurance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Insurance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IsFragile__c</fullName>
        <label>IsFragile</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Route</label>
        <referenceTo>Route__c</referenceTo>
        <relationshipLabel>Mails</relationshipLabel>
        <relationshipName>Mails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Width__c</fullName>
        <label>Width</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Mail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Mail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>